04022026, 13:53: Kotlin DSA Sliding Window Pattern - Longest Substring Without Repeating Characters - Maxium Subarray Sum (Kadane's Algorithm)